refactor: interest 제네릭 타입 명시 및 static import 사용, toList 대체